manifests/ingress/ingress-with-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: demo-app-test
    app.kubernetes.io/managed-by: demo-app
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-prod
  name: demo-app-test-with-tls
spec:
  rules:
  - host: demo-app-with-tls.k8s.fscker.org
    http:
      paths:
      - backend:
          serviceName: demo-app
          servicePort: http
        path: /
  tls:
  - hosts:
    - demo-app-with-tls.k8s.fscker.org
    secretName: demo-app-with-tls-k8s-fscker-org
