manifests/ingress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: demo-app-test
    app.kubernetes.io/managed-by: demo-app
  name: demo-app-test
spec:
  rules:
  - host: demo-app.k8s.fscker.org
    http:
      paths:
      - backend:
          serviceName: demo-app
          servicePort: http
        path: /
